--- a/sorting_visualizer.css
+++ b/sorting_visualizer.css
@@ -4,8 +4,6 @@ body {
 
 h1 {
   font-size: 2rem;
-  text-align: center;
-  margin-top: 0rem;
 }
 
 span {
@@ -15,6 +13,40 @@ span {
 .top-container {
   display: flex;
   justify-content: center;
+  margin-top: 0;
+}
+
+.top-left {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-middle {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-middle div {
+  font-size: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
+  font-weight: 200;
+}
+
+.top-right {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.middle-container {
+  width: 100%;
+  display: flex;
 }
 
 .sorting-container {
@@ -22,6 +54,8 @@ span {
   width: 100%;
   justify-content: center;
   align-items: flex-end;
+  height: 250px;
+  margin-bottom: 20px;
 }
 
 .sorting-bar {
@@ -40,10 +74,16 @@ span {
 button {
   border: none;
   outline: none;
-  font-size: 1rem;
+  font-size: 0.8rem;
   cursor: pointer;
   padding: 0.5rem;
   font-family: "Avenir";
+}
+
+#reload-page {
+  height: 50px;
+  align-self: center;
+  margin-right: 30px;
 }
 
 #input {
@@ -52,16 +92,23 @@ button {
   justify-content: space-around;
 }
 
-#speed {
-  margin-top: 3rem;
-  margin-left: 5rem;
-  font-size: 1rem;
+#arrSize {
+  font-size: 0.9rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
 }
 
-#arrSize {
-  margin-top: 3rem;
-  margin-right: 5rem;
-  font-size: 1rem;
+#arrSize input,
+#speed input {
+  width: 120px;
+}
+
+#speed {
+  font-size: 0.9rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
 }
